--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -20,6 +20,7 @@
         "pages/scanCode/cardScanEdit/cardScanEdit",
         "pages/register/personInfo/personInfo",
         "pages/register/companyInfo/companyInfo",
+        "pages/register/bindPhone/bindPhone",
         "pages/identity/chooseIdentity/chooseIdentity",
         "pages/identity/identityResult/identityResult",
         "pages/identity/sellerFA/sellerFA",
