--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -73,7 +73,8 @@
     "pages/contactsActivty/createInfo/createInfo",
     "pages/contactsActivty/activtyRegister/activtyRegister",
     "pages/contactsActivty/topPlayer/topPlayer",
-    "pages/contactsActivty/warbandMember/warbandMember"
+    "pages/contactsActivty/warbandMember/warbandMember",
+    "pages/contactsActivty/expandContacts/expandContacts"
   ],
   "window": {
     "navigationBarBackgroundColor": "#fff",
