--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -76,7 +76,8 @@
     "pages/contactsActivty/activtyRegister/activtyRegister",
     "pages/contactsActivty/topPlayer/topPlayer",
     "pages/contactsActivty/warbandMember/warbandMember",
-    "pages/contactsActivty/expandContacts/expandContacts"
+    "pages/contactsActivty/expandContacts/expandContacts",
+    "pages/contactsActivty/myWarband/myWarband"
   ],
   "window": {
     "navigationBarBackgroundColor": "#fff",
