--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -100,7 +100,7 @@
         "iconPath": "img/icon-renmai-n@2x.png",
         "selectedIconPath": "img/icon-renmai-s@2x.png",
         "pagePath": "pages/discoverInvest/discoverInvest",
-        "text": "找人脉"
+        "text": "找投资"
       },
       {
         "iconPath": "img/message.png",
