--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -57,6 +57,8 @@
     "pages/myProject/publishProject/publishProject",
     "pages/myProject/pushTo/pushTo",
     "pages/myProject/initPrivacy/initPrivacy",
+    "pages/myProject/pushToSuccess/pushToSuccess",
+    "pages/myProject/publishSuccess/publishSuccess",
     "pages/my/investCase/investCase",
     "pages/my/sharePage/sharePage",
     "pages/my/investCaseEdit/investCaseEdit",
