--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -13,26 +13,7 @@
 	"condition": {
 		"weapp": {
 			"current": -1,
-			"list": [
-				{
-					"id": -1,
-					"name": "分享后的项目店铺",
-					"pathName": "pages/my/projectShop/projectShop/projectShop",
-					"query": "followed_user_id=Np38mX9r"
-				},
-				{
-					"id": -1,
-					"name": "项目亮点",
-					"pathName": "pages/myProject/projectDetail/projectDetail",
-					"query": "id=v0e4KqrL&index=undefined&share_id=bpjqNzDW"
-				},
-				{
-					"id": -1,
-					"name": "项目亮点",
-					"pathName": "pages/myProject/projectDetail/projectDetail",
-					"query": "id=v0e4KqrL"
-				}
-			]
+			"list": []
 		},
 		"search": {
 			"current": -1,
