--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -12,7 +12,7 @@
 	"projectname": "%E5%BE%AE%E5%A4%A9%E4%BD%BF",
 	"condition": {
 		"weapp": {
-			"current": 3,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -43,6 +43,12 @@
 					"name": "beAddedContacts",
 					"pathName": "pages/message/beAddedContacts/beAddedContacts",
 					"query": ""
+				},
+				{
+					"id": 5,
+					"name": "分享后的我的项目 ",
+					"pathName": "pages/projectDetail/projectDetail",
+					"query": "id=e0qQB10v&&share_id=mr93M3KW"
 				}
 			]
 		},
