--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -12,7 +12,7 @@
 	"projectname": "%E5%BE%AE%E5%A4%A9%E4%BD%BF",
 	"condition": {
 		"weapp": {
-			"current": 6,
+			"current": -1,
 			"list": [
 				{
 					"id": 1,
@@ -72,6 +72,18 @@
 					"id": -1,
 					"name": "org_search",
 					"pathName": "pages/organization/org_search/org_search",
+					"query": ""
+				},
+				{
+					"id": 10,
+					"name": "oneKeyResearch",
+					"pathName": "pages/oneKeyResearch/oneKeyResearch",
+					"query": "id=e0qQB10v"
+				},
+				{
+					"id": -1,
+					"name": "list_orgMember",
+					"pathName": "pages/organization/subPage/list_orgMember/list_orgMember",
 					"query": ""
 				}
 			]
