--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 Weitianshi/.idea/workspace.xml
 Weitianshi/.idea/workspace.xml
 Weitianshi/pages/match/match/match/match.js
+Weitianshi/project.config.json
