--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,11 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
-		},
-		"miniprogram": {
-			"current": 12,
+			"current": 5,
 			"list": [
 				{
 					"id": 1,
@@ -61,7 +57,7 @@
 					"id": 5,
 					"name": "project_orgMatch",
 					"pathName": "pages/organization/subPage/project_orgMatch/project_orgMatch",
-					"query": ""
+					"query": "project_id=EypO7pKQ&&page=1"
 				},
 				{
 					"id": -1,
