--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 12,
 			"list": [
 				{
 					"id": 1,
@@ -99,7 +99,7 @@
 					"id": 12,
 					"name": "投资机构",
 					"pathName": "pages/organization/org_library/org_library",
-					"query": "label=label_style&&itemId=5"
+					"query": ""
 				}
 			]
 		}
