--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Weitianshi/.idea/workspace.xml
 Weitianshi/.idea/workspace.xml
 Weitianshi/pages/match/match/match/match.js
 Weitianshi/project.config.json
+Weitianshi/project.config.json
