--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 5,
 			"list": [
 				{
 					"id": 1,
@@ -57,7 +57,7 @@
 					"id": 5,
 					"name": "project_orgMatch",
 					"pathName": "pages/organization/subPage/project_orgMatch/project_orgMatch",
-					"query": ""
+					"query": "project_id=a1ryoGW3"
 				},
 				{
 					"id": -1,
