--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Weitianshi/.idea/workspace.xml
 Weitianshi/pages/match/match/match/match.js
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
