--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Weitianshi/pages/match/match/match/match.js
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
