11-17-霍春阳-下班
1.添加打分功能
2.添加分享二维码页面和功能

--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -50,6 +50,7 @@
     "pages/my/projectShop/projectShop/projectShop",
     "pages/my/projectShop/projectSearch/projectSearch",
     "pages/my/projectShop/shopEdit/shopEdit",
+    "pages/my/projectShop/shopShare/shopShare",
     "pages/my/qrCode/qrCode",
     "pages/my/identity/indentity/indentity",
     "pages/my/identity/identityEdit/identityEdit",
