--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 16,
 			"list": [
 				{
 					"id": 1,
@@ -109,7 +109,6 @@
 				},
 				{
 					"id": 14,
-
 					"name": "项目评价",
 					"pathName": "pages/projectScale/projectEvaluation/projectEvaluation",
 					"query": ""
@@ -119,6 +118,12 @@
 					"name": "他人项目详情",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "user_id=OrwRjRjp&project_id=90knK6r4"
+				},
+				{
+					"id": -1,
+					"name": "环境经济的店铺",
+					"pathName": "pages/my/projectShop/projectShop/projectShop",
+					"query": ""
 				}
 			]
 		}
