--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
