--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 19,
 			"list": [
 				{
 					"id": 1,
@@ -123,6 +123,24 @@
 					"id": -1,
 					"name": "环境经济的店铺",
 					"pathName": "pages/my/projectShop/projectShop/projectShop",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "创建项目",
+					"pathName": "pages/myProject/publishProject/publishProject",
+					"query": ""
+				},
+				{
+					"id": 18,
+					"name": "投资需求",
+					"pathName": "pages/match/match/investDemand/investDemand",
+					"query": "current=1"
+				},
+				{
+					"id": -1,
+					"name": "阶段表单",
+					"pathName": "pages/form/stage/stage",
 					"query": ""
 				}
 			]
