--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 20,
 			"list": [
 				{
 					"id": 1,
@@ -142,6 +142,12 @@
 					"name": "阶段表单",
 					"pathName": "pages/form/stage/stage",
 					"query": ""
+				},
+				{
+					"id": 20,
+					"name": "认证资料",
+					"pathName": "pages/my/identity/identityEdit/identityEdit",
+					"query": "group_id=18&authenticate_id=7899&isUpdate=0"
 				}
 			]
 		}
