--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 20,
+			"current": -1,
 			"list": [
 				{
 					"id": 1,
@@ -138,9 +138,9 @@
 					"query": "current=1"
 				},
 				{
-					"id": -1,
-					"name": "阶段表单",
-					"pathName": "pages/form/stage/stage",
+					"id": 19,
+					"name": "领域表单",
+					"pathName": "pages/form/industry/industry",
 					"query": ""
 				},
 				{
