--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -124,6 +124,12 @@
 					"name": "Search3",
 					"pathName": "pages/search/search3/search3",
 					"query": "user_id=Np38mX9r&entrance=faList"
+				},
+				{
+					"id": -1,
+					"name": "硅谷银行",
+					"pathName": "pages/organization/org_detail/org_detail",
+					"query": "investment_id=607"
 				}
 			]
 		}
