--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 21,
+			"current": -1,
 			"list": [
 				{
 					"id": 1,
@@ -172,14 +172,18 @@
 					"name": "项目店铺",
 					"pathName": "pages/my/projectShop/projectShop/projectShop",
 					"query": ""
-					"pathName": "pages/my/investCase/investCase",
-					"query": ""
 				},
 				{
 					"id": 22,
 					"name": "项目推送",
 					"pathName": "pages/message/pushProject/pushProject",
 					"query": "type=7&num=1"
+				},
+				{
+					"id": -1,
+					"name": "浏览项目的人",
+					"pathName": "pages/message/viewProjectUser/viewProjectUser",
+					"query": "project_id=PpPk2ZWR"
 				}
 			]
 		}
