12-12-霍春阳-下班
修改剩余点击反馈,以及发现的bug

--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 22,
 			"list": [
 				{
 					"id": 1,
@@ -154,6 +154,12 @@
 					"name": "浏览项目的人",
 					"pathName": "pages/message/viewProjectUser/viewProjectUser",
 					"query": "project_id=PpPk2ZWR"
+				},
+				{
+					"id": 22,
+					"name": "约谈",
+					"pathName": "pages/message/contactProject/projectList/projectList",
+					"query": "id=xpE8b5Wq"
 				}
 			]
 		}
