--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -154,6 +154,12 @@
 					"name": "浏览项目的人",
 					"pathName": "pages/message/viewProjectUser/viewProjectUser",
 					"query": "project_id=PpPk2ZWR"
+				},
+				{
+					"id": -1,
+					"name": "找项目投资人",
+					"pathName": "pages/matchInvestor/matchInvestor",
+					"query": ""
 				}
 			]
 		}
