--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 22,
+			"current": 23,
 			"list": [
 				{
 					"id": 1,
@@ -160,6 +160,24 @@
 					"name": "约谈",
 					"pathName": "pages/message/contactProject/projectList/projectList",
 					"query": "id=xpE8b5Wq"
+				},
+				{
+					"id": -1,
+					"name": "找项目投资人",
+					"pathName": "pages/matchInvestor/matchInvestor",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "案例添加",
+					"pathName": "pages/my/investCaseEdit/investCaseEdit",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "编辑案例添加",
+					"pathName": "pages/my/investCaseEdit/investCaseEdit",
+					"query": "index=2&case_id=481"
 				}
 			]
 		}
