--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
