--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
