--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/project.config.json
