--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -44,6 +44,7 @@
     "pages/my/projectShop/projectSearch/projectSearch",
     "pages/my/projectShop/shopEdit/shopEdit",
     "pages/my/projectShop/shopShare/shopShare",
+    "pages/my/projectShop/tagFilter/tagFilter",
     "pages/my/qrCode/qrCode",
     "pages/my/identity/indentity/indentity",
     "pages/my/identity/identityEdit/identityEdit",
