--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -178,6 +178,12 @@
 					"name": "项目店铺筛选",
 					"pathName": "pages/my/projectShop/tagFilter/tagFilter",
 					"query": ""
+				},
+				{
+					"id": 26,
+					"name": "裁剪",
+					"pathName": "pages/Cropper/Cropper",
+					"query": ""
 				}
 			]
 		}
