--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
+Weitianshi/.idea/workspace.xml
