--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.6.0",
-	"appid": "wxdf2eba3b79b83110",
-	"projectname": "%E5%BE%AE%E5%A4%A9%E4%BD%BF",
+	"appid": "wx29c97aaa8a58aedb",
+	"projectname": "%E5%A4%A7%E6%B9%BE%E5%8C%BA",
 	"condition": {
 		"search": {
 			"current": -1,
