--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 25,
+			"current": 22,
 			"list": [
 				{
 					"id": 2,
@@ -46,12 +46,6 @@
 					"name": "project_orgMatch",
 					"pathName": "pages/organization/subPage/project_orgMatch/project_orgMatch",
 					"query": "project_id=a1ryoGW3"
-				},
-				{
-					"id": -1,
-					"name": "org_search",
-					"pathName": "pages/organization/org_search/org_search",
-					"query": ""
 				},
 				{
 					"id": 6,
@@ -133,12 +127,6 @@
 				},
 				{
 					"id": -1,
-					"name": "找项目投资人",
-					"pathName": "pages/matchInvestor/matchInvestor",
-					"query": ""
-				},
-				{
-					"id": -1,
 					"name": "案例添加",
 					"pathName": "pages/my/investCaseEdit/investCaseEdit",
 					"query": ""
@@ -162,16 +150,15 @@
 					"query": ""
 				},
 				{
-					"id": 25,
-					"name": "裁剪",
-					"pathName": "pages/register/bindSuccess/bindSuccess",
+					"id": -1,
+					"name": "我的二级页面",
+					"pathName": "pages/my/my/my",
 					"query": ""
 				},
 				{
 					"id": -1,
-					"name": "认证回退",
-					"pathName": "pages/my/identity/identityResult/identityResult",
-					"query": ""
+					"name": "创建项目页面",
+					"pathName": "pages/myProject/publishSuccess/publishSuccess"
 				}
 			]
 		}
