--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -8,7 +8,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "1.7.2",
+	"libVersion": "1.6.6",
 	"appid": "wx29c97aaa8a58aedb",
 	"projectname": "%E5%A4%A7%E6%B9%BE%E5%8C%BA",
 	"condition": {
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 21,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -127,24 +127,12 @@
 				},
 				{
 					"id": -1,
-					"name": "编辑案例添加",
-					"pathName": "pages/my/investCaseEdit/investCaseEdit",
-					"query": "index=2&case_id=481"
-				},
-				{
-					"id": -1,
 					"name": "找投资人",
 					"pathName": "pages/matchInvestor/matchInvestor",
 					"query": ""
 				},
 				{
 					"id": -1,
-					"name": "项目店铺筛选",
-					"pathName": "pages/my/projectShop/tagFilter/tagFilter",
-					"query": ""
-				},
-				{
-					"id": -1,
 					"name": "创建项目页面",
 					"pathName": "pages/myProject/publishSuccess/publishSuccess",
 					"query": ""
@@ -153,7 +141,6 @@
 					"id": -1,
 					"name": "创建项目页面",
 					"pathName": "pages/myProject/publishSuccess/publishSuccess",
-
 					"query": ""
 				},
 				{
@@ -172,6 +159,18 @@
 					"id": -1,
 					"name": "创建页面",
 					"pathName": "pages/myProject/publishProject/publishProject",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "本人项目详情",
+					"pathName": "pages/myProject/projectDetail/projectDetail",
+					"query": "id=k0xlyx0v&index=undefined"
+				},
+				{
+					"id": 24,
+					"name": "按钮",
+					"pathName": "component/buttonBtn/buttonBtn",
 					"query": ""
 				}
 			]
