--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/project.config.json
 Weitianshi/.idea/workspace.xml
+.idea/workspace.xml
