--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 25,
 			"list": [
 				{
 					"id": 0,
@@ -172,6 +172,11 @@
 					"name": "我的投资名片",
 					"pathName": "pages/my/my/my",
 					"query": "id=Opv5J3lW"
+				},
+				{
+					"id": -1,
+					"name": "搜索2",
+					"pathName": "pages/search/search2/search2"
 				}
 			]
 		}
