--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 25,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -176,7 +176,8 @@
 				{
 					"id": -1,
 					"name": "搜索2",
-					"pathName": "pages/search/search2/search2"
+					"pathName": "pages/search/search2/search2",
+					"query": ""
 				}
 			]
 		}
