霍春阳  1-4-下班
项目创建 项目编辑 搜索页面

--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -178,6 +178,12 @@
 					"name": "搜索2",
 					"pathName": "pages/search/search2/search2",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "编辑项目",
+					"pathName": "pages/myProject/publishedProject/publishedProject",
+					"query": "pro_id=EWgmQQrJ"
 				}
 			]
 		}
