--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 25,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -156,12 +156,6 @@
 					"query": ""
 				},
 				{
-					"id": -1,
-					"name": "本人项目详情",
-					"pathName": "pages/myProject/projectDetail/projectDetail",
-					"query": "id=k0xlyx0v&index=undefined"
-				},
-				{
 					"id": 25,
 					"name": "他人的投资名片",
 					"pathName": "pages/userDetail/networkDetail/networkDetail",
@@ -184,6 +178,12 @@
 					"name": "编辑项目",
 					"pathName": "pages/myProject/publishedProject/publishedProject",
 					"query": "pro_id=EWgmQQrJ"
+				},
+				{
+					"id": -1,
+					"name": "绑定成功",
+					"pathName": "pages/myProject/pushToSuccess/pushToSuccess",
+					"query": "type=0"
 				}
 			]
 		}
