1-10-霍春阳-下班
更改样式bug
2.更改搜索 样式

--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -116,7 +116,7 @@
       }
     ],
     "selectedColor": "#40587A",
-    "borderStyle": "white",
+    "borderStyle": "#fafafa",
     "color": "#999999"
   },
   "networkTimeout": {
