--- a/Weitianshi/pages/discoverProject/discoverProject.json
+++ b/Weitianshi/pages/discoverProject/discoverProject.json
@@ -1,5 +1,5 @@
 {
-  "navigationBarTitleText": "找项目",
-  "navigationBarBackgroundColor": "#40587a", 
+  "navigationBarTitleText": "首页",
+  "navigationBarBackgroundColor": "#293B55",
   "navigationBarTextStyle": "white"
 }
