--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -127,7 +127,8 @@
         "pages/activitySignForm/activitySignForm",
         "pages/signScan/signScan",
         "pages/signCheckIndentity/signCheckIndentity",
-        "pages/signIndentityCard/signIndentityCard"
+        "pages/signIndentityCard/signIndentityCard",
+        "pages/signNoIdentity/signNoIdentity"
       ]
     }
   ],
