--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -123,8 +123,6 @@
 					"pathName": "pages/my/my/my",
 					"query": "id=Opv5J3lW"
 				},
-
-
 				{
 					"id": 23,
 					"name": "活动签到",
@@ -142,6 +140,11 @@
 					"name": "他人项目详情",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "id=bpjJXqp9"
+				},
+				{
+					"id": -1,
+					"name": "活动签到",
+					"pathName": "activitySignIn/pages/signCheckIndentity/signCheckIndentity"
 				}
 			]
 		}
